Refactorizada la API para cubrir más casos al exportar documentos de compra o venta a PDF.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Has d'introduir primer el concepte del seient",
     "accept": "Acceptar",
     "accept-all": "Acceptar-ho tot",
     "accept-data": "Acceptar canvis o operació",
