--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -395,7 +395,7 @@
     "database": "Base de datos",
     "database-error": "Chyba při připojení k databázi",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 pokud je program nainstalován na serveru nebo hostingu, pravděpodobně jste změnili uživatelské jméno nebo heslo k databázi, nebo jste dosáhli nějakého limitu použití hostingu.",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha entrada",
@@ -596,7 +596,7 @@
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Régimen simplificado",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-small-business": "Zvláštní daňový režim pro malé podniky",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Zvláštní režimy vztahující se na telekomunikační služby, vysílání nebo televizi a služby poskytované elektronickou cestou",
     "es-tax-regime-travel": "Zvláštní režim cestovních agentur",
@@ -1450,7 +1450,7 @@
     "settlement": "Liquidación",
     "settlement-product": "Producto de liquidación",
     "settlements": "Liquidaciones",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Ruční nastavení",
     "setup-options": "Ajustar opciones",
     "shipping": "Envío",
     "shipping-address": "Dirección de envío",
