--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abgekürz",
     "about": "Über",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Zuerst müssen Sie das Konzept des Eintrags angeben",
     "accept": "akzeptieren",
     "accept-all": "Aceptar todo",
     "accept-data": "Akzeptieren Sie Änderungen oder Vorgänge",
@@ -1201,7 +1201,7 @@
     "phones": "Telefonnummern",
     "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
     "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "PHP-Erweiterungen",
     "php-extensions-required": "Extensiones PHP requeridas",
     "php-support-end": "PHP-Endsupport",
     "php-version-too-new": "Es wird empfohlen, eine PHP-Version zwischen %min_version% und %max_version% zu verwenden. Derzeit haben Sie die Version %version%.",
@@ -1650,7 +1650,7 @@
     "two-factor-auth-disabled": "Zwei-Faktor-Authentifizierung deaktiviert",
     "two-factor-auth-enable": "Aktivieren Sie die 2-Faktor-Authentifizierung",
     "two-factor-auth-enabled": "Die Zwei-Faktor-Authentifizierung ist aktiviert.",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Richten Sie die Google Authenticator-App mit dem QR-Code ein, geben Sie hier den Code ein und klicken Sie auf Überprüfen, um den Aktivierungsprozess abzuschließen.",
     "two-factor-code": "Zwei-Faktor-Code",
     "two-factor-enabled": "Zwei-Faktor-Authentifizierung aktivieren",
     "type": "Typ",
