--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abbreviated",
     "about": "About",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "You must first enter the entry concept",
     "accept": "Accept",
     "accept-all": "Accept all",
     "accept-data": "Accept changes or operation",
@@ -584,7 +584,7 @@
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "tax exception for passive subject",
+    "es-tax-exception-passive-subject": "Tax exception for passive subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
     "es-tax-regime-especial-agp": "Special regime for agriculture, livestock and fisheries",
@@ -928,7 +928,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Load default accounting plan",
     "loading-controller": "Loading controller: '%controllerName%'",
-    "local-business-rental": "Rental of premises",
+    "local-business-rental": "Rental of Premises",
     "location": "Location",
     "lock-accounting": "Lock accounting",
     "lock-entry": "Lock entry",
@@ -1126,7 +1126,7 @@
     "opening-operation": "Opening",
     "operating-system": "Operating System",
     "operation": "Operation",
-    "operation-export": "Export operation",
+    "operation-export": "Export Operation",
     "operator": "Operator",
     "option": "Option",
     "optional": "optional",
@@ -1678,7 +1678,7 @@
     "unlink-install-ok": "Installation cleared registry successfully.",
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
-    "unsafe-file": "Unsafe file",
+    "unsafe-file": "Unsafe File",
     "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
