--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -394,7 +394,7 @@
     "data-source": "Jatorrizko datuak",
     "database": "Datu basea",
     "database-error": "Errorea datubasearekin konetatzerakoan",
-    "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
+    "database-error-pc": "🖥️ Programa zure PC-n instalatuta badago, agian MySQL aktibatzea ahaztu zaizu edo aktibatzeko arazoak izan ditzake.",
     "database-error-server": "🌎 programaren instalazioa zerbitzari edo hosting batean badago, litekeena da datu-basearen erabiltzailea edo pasahitza aldatzea, edo hostingaren erabilera-muga batera iristea.",
     "database-name-must-be-lowercase": "Datu-basearen izena minuskuletan izan behar du",
     "date": "Data",
@@ -1062,7 +1062,7 @@
     "next": "Hurrengoa",
     "nick": "Goitizena",
     "no": "Ez",
-    "no-admin": "No administrador",
+    "no-admin": "Ez da administratzaile",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
     "no-document-selected": "Ez da dokumenturik hautatu",
@@ -1124,7 +1124,7 @@
     "opened": "Irekita",
     "opening-acounting-completed": "Ekitaldi irekitze zuzena",
     "opening-operation": "Irekitzea",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Sistema Operatiboa",
     "operation": "Operazioa",
     "operation-export": "Esportazio operazioa",
     "operator": "Operadorea",
@@ -1442,7 +1442,7 @@
     "serierb": "RB seriea",
     "series": "Serieak",
     "server": "Zerbitzaria",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Fitxategien igoera max. tamaina",
     "server-software": "Zerver software",
     "service": "Zerbitzua",
     "services": "Zerbitzuak",
