--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abrégé",
     "about": "Sur",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Vous devez d'abord entrer le concept de l'écriture",
     "accept": "Accepter",
     "accept-all": "Acceptar tot",
     "accept-data": "Accepter les modifications ou l'opération",
@@ -161,7 +161,7 @@
     "barcode": "code à barre",
     "bcc": "CCI",
     "become-sponsor": "Devenez sponsor",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "avantage-3-parties",
     "big": "Grand",
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
@@ -229,7 +229,7 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Changer",
-    "change-password-online-warning": "Si cette installation va à être en ligne, vous devriez changer le mot de passe pour un plus sécurisé.",
+    "change-password-online-warning": "Si cette installation va être en ligne, vous devriez changer le mot de passe pour un plus sécurisé.",
     "channel": "canal",
     "charge-date": "Date de facturation",
     "chart": "Graphique",
@@ -672,7 +672,7 @@
     "fixed-value": "Valeur fixe",
     "flag": "Drapeau",
     "folder-not-writable": "Vous ne pouvez pas écrire sur le dossier FacturaScripts.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Impossible d'écrire dans les dossiers de FacturaScripts : %folders%",
     "font": "Police de caractère",
     "font-size": "Corps",
     "footer": "Pié de página",
@@ -999,7 +999,7 @@
     "meta-description": "FacturaScripts est un logiciel de facturation et de comptabilité pour pymes. C'est un logiciel libre sous licence GNU \/ LGPL.",
     "method-payment": "Moyen de paiement",
     "mime-type": "Type MIME",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Version min. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Montant minimum avec CIF\/NIF",
     "minimum-amount-without-cifnif": "Montant minimum sans CIF\/NIF",
@@ -1679,7 +1679,7 @@
     "unlock-entry": "Déverrouiller",
     "unpaid": "Non payé",
     "unsafe-file": "Fichier non sécurisé",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Pour des raisons de sécurité, nous empêchons le téléchargement de certains types de fichiers, comme celui-ci : %file%",
     "until-accounting-entry": "Jusqu'à l'entrée",
     "until-date": "Jusqu'à la date",
     "until-subaccount": "Jusqu'au sous-compte",
