--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca de",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Debes introducir primeiro o concepto do asento",
     "accept": "Aceptar",
     "accept-all": "Aceptar todo",
     "accept-data": "Acepte cambios ou operación",
@@ -161,7 +161,7 @@
     "barcode": "Código de barras",
     "bcc": "BCC",
     "become-sponsor": "Faite patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "beneficio-3-partes",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -1115,7 +1115,7 @@
     "only-closed": "Só pechados",
     "only-insert": "Só engadir",
     "only-owner-data": "Amosar soamente rexistros do usuario",
-    "only-owner-data-p": "Marcando a opción de amosar só rexistros do usuario, só poderá ver rexistros que el creou ou que tenga asignados (como usuario ou axente)",
+    "only-owner-data-p": "Marcando a opción de amosar só rexistros do usuario, só poderá ver rexistros que el creou ou que ten asignados (como usuario ou axente)",
     "only-pending": "Só pendentes",
     "only-suspended": "soamente suspendidos",
     "open": "Abrir",
@@ -1126,7 +1126,7 @@
     "opening-operation": "Apertura",
     "operating-system": "Sistema Operativo",
     "operation": "Operación",
-    "operation-export": "Operación exportación",
+    "operation-export": "Operación de exportación",
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
