--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -576,7 +576,7 @@
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
     "es-tax-exception-e2": "Spagna: eccezione per l'articolo 21 della legge sull'IVA",
     "es-tax-exception-e3": "Spagna: eccezione per l'articolo 22 della legge sull'IVA",
@@ -593,7 +593,7 @@
     "es-tax-regime-gold": "Regime speciale dell'oro di investimento",
     "es-tax-regime-group-entities": "Regime fiscale speciale per il gruppo di entità",
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-oss": "regime fiscale-es-sportello unico-oss",
     "es-tax-regime-simplified": "Regime fiscale semplificato",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
     "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
@@ -1228,7 +1228,7 @@
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
     "plugins": "Plugins",
     "plugins-p": "I plugin permettono di aggiungere nuove funzionalità. Attiva quelli di cui hai bisogno ora, o fallo quando vuoi dal menu amministratore.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugin richiesti",
     "points": "Punti",
     "points-of-interest": "Punti di interesse",
     "port": "Puerto",
@@ -1442,7 +1442,7 @@
     "serierb": "Serie RB",
     "series": "serie",
     "server": "Server",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Dimensione massima upload file",
     "server-software": "Software del server",
     "service": "Servizio",
     "services": "servizi",
