--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1202,7 +1202,7 @@
     "php-extension-needed": "Es requereix l'extensió %extension% en la configuració de PHP",
     "php-extension-not-found": "No tens instalada l'extensió PHP %extension%.",
     "php-extensions": "Extensiones PHP",
-    "php-extensions-required": "Extensiones PHP requeridas",
+    "php-extensions-required": "Extensiones PHP requerides",
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana usar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
@@ -1228,7 +1228,7 @@
     "plugin-update": "Actualització del complement %pluginName% a la versió %version%",
     "plugins": "Complements",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugins requerits",
     "points": "Punts",
     "points-of-interest": "Punts d'interès",
     "port": "Port",
