--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -161,7 +161,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Torne-se patrocinador",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "benefício de 3 partes",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -999,7 +999,7 @@
     "meta-description": "FacturaScripts é um software de contabilidade e contabilidade para as PMEs. É um software livre sob a licença GNU \/ LGPL.",
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
-    "min-fs-version": "Versión min. Core",
+    "min-fs-version": "Versão min. Core",
     "min-php-version": "Min. v. PHP",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
     "minimum-amount-without-cifnif": "Importe mínimo sem CIF\/NIF",
@@ -1115,7 +1115,7 @@
     "only-closed": "Apenas fechado",
     "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
-    "only-owner-data-p": "Marcando a opção de mostrar apenas registos do utilizador, apenas poderá ver registos que ele criou ou que têm atribuídos (como utilizador ou agente)",
+    "only-owner-data-p": "Ao marcar a opção de mostrar apenas registos do utilizador, só poderá ver registos que ele criou ou que têm atribuídos (como utilizador ou agente)",
     "only-pending": "Só pendentes",
     "only-suspended": "Apenas suspensos",
     "open": "Abrir",
@@ -1126,7 +1126,7 @@
     "opening-operation": "Abertura",
     "operating-system": "Sistema Operativo",
     "operation": "Operação",
-    "operation-export": "Operación exportación",
+    "operation-export": "Operação de exportação",
     "operator": "Operador",
     "option": "Opção",
     "optional": "Opcional",
@@ -1201,7 +1201,7 @@
     "phones": "Telefones",
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
     "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
-    "php-extensions": "Extensiones PHP",
+    "php-extensions": "Extensões PHP",
     "php-extensions-required": "Extensões PHP requeridas",
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
@@ -1678,7 +1678,7 @@
     "unlink-install-ok": "Instalação removida do registro corretamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impago",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Arquivo não seguro",
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
