Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -93,7 +93,7 @@
     "allow-sale-without-stock-n": "Verkauf ohne Lagerbestand für neue Produkte zulassen",
     "allow-update": "Aktualisierung zulassen",
     "already-installed": "Bereits installiert",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "Das Programm ist bereits installiert",
     "always-to-company-email": "Immer an die Unternehmens-E-Mail",
     "amount": "Menge",
     "amount-without-discount": "Preis ohne Rabatt",
@@ -395,7 +395,7 @@
     "database": "Datenbank",
     "database-error": "Fehler bei der Verbindung zur Datenbank",
     "database-error-pc": "🖥️ Si el programa está instalado en tu PC, probablemente se te haya olvidado activar MySQL o tenga problemas para activarse.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 Wenn das Programm auf einem Server oder Hosting installiert ist, haben Sie wahrscheinlich den Benutzernamen oder das Passwort der Datenbank geändert oder das Nutzungslimit des Hostings erreicht.",
     "database-name-must-be-lowercase": "Der Dateiname muss in Kleinbuchstaben sein",
     "date": "Datum",
     "date-in": "Datum in",
