--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -562,7 +562,7 @@
     "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
     "error-connecting-memcache": "Errore bat gertatu da Memcache zerbitzarira konektatzean.",
     "error-deleting-lines": "Errore bat gertatu da lerroak ezabatzean",
-    "error-generating-qr-code": "QR-a sortzea ez da posible izan: %message%, %url%",
+    "error-generating-qr-code": "QR sortzea ez da posible izan: %message%, %url%",
     "error-no-name-in-settings": "Errore bat dago %viewName% ikuspegian. Xml-an zutabe baten 'name' jakinaraztea falta da",
     "error-on-xml-file": "Errore bat dago %fileName% XML artxiboan",
     "error-processing-xmlview": "Errore bat gertatu XML ikuspegia prozesatzean, '%fileName%' artxiboa ez da existitzen edo ez da zuzena",
@@ -822,7 +822,7 @@
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
     "invalid-token": "Token baliogabea",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Artikuluaren %file% sarbide-tokena ez da baliogarria edo iraungita dago",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
     "invalid-web": "Web helbide baliogabea",
     "invoice": "Faktura",
@@ -1228,7 +1228,7 @@
     "plugin-update": "%PluginName% plugina %version%. bertsiora eguneratu da",
     "plugins": "Pluginak",
     "plugins-p": "Pluginak funtzio berriak gehitzeko aukera ematen dute. Aktibatu behar dituzunak orain, edo nahi duzunean administratzailearen menutik.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Pluginak beharrezkoak",
     "points": "Puntuak",
     "points-of-interest": "Intereseko puntu",
     "port": "Ataka",
@@ -1763,7 +1763,7 @@
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
-    "work-certification": "Certificación",
+    "work-certification": "Ziurtagiria",
     "work-events": "Lan ekitaldiak",
     "working-hours": "Lan orduak",
     "works": "Lanak",
