--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -395,7 +395,7 @@
     "database": "Base de données",
     "database-error": "Erreur de connexion à la base de données",
     "database-error-pc": "🖥️ Si le programme est installé sur votre PC, il est probable que vous ayez oublié d'activer MySQL ou qu'il y ait des problèmes d'activation.",
-    "database-error-server": "🌎 si el programa está instalado en un servidor o hosting, probablemente hayas cambiado el usuario o contraseña de la base de datos, o hayas llegado a algún límite de uso del hosting.",
+    "database-error-server": "🌎 Si le programme est installé sur un serveur ou un hébergement, vous avez probablement changé l'utilisateur ou le mot de passe de la base de données, ou vous avez atteint une limite d'utilisation de l'hébergement.",
     "database-name-must-be-lowercase": "Le nom de la base de données doit être en minuscules",
     "date": "Date",
     "date-in": "Date dans",
@@ -1693,7 +1693,7 @@
     "updates-available": "Mises à jour disponibles",
     "updates-available-p": "Des mises à jour d'InfacturaScripts sont disponibles. Veuillez cliquer sur le programme de mise à jour et télécharger la nouvelle version. Les mises à jour corrigent les bugs et ajoutent de nouvelles fonctionnalités.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Les mises à jour bêta sont activées. Ces mises à jour n'ont pas été testées et ne sont recommandées que pour les installations de test.",
     "updating-attached-relations": "Mise à jour des compteurs de pièces jointes",
     "upload-file": "Subir archivo",
     "uploaded-at": "Téléversé vers",
