--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1070,7 +1070,7 @@
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
     "no-outstanding-amount": "Não há valor pendente",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
