--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1442,7 +1442,7 @@
     "serierb": "Sèrie RB",
     "series": "Séries",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Mida màx. pujada fitxers",
     "server-software": "Programari del servidor",
     "service": "Servici",
     "services": "Serveis",
@@ -1648,7 +1648,7 @@
     "two-factor-auth": "Autenticació en 2 passos",
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
-    "two-factor-auth-enable": "Activar autenticació en 2 passos",
+    "two-factor-auth-enable": "Activar autenticació a 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
     "two-factor-auth-p": "Configura l'app Google Authenticator utilitzant el QR, introdueix aquí el codi i prem verificar per completar el procés d'activació.",
     "two-factor-code": "Codi de doble factor",
@@ -1693,7 +1693,7 @@
     "updates-available": "Actualitzacions disponibles",
     "updates-available-p": "Hi ha actualitzacions disponibles de FacturaScripts. Si us plau, feu clic a l'actualitzador i descarregueu la nova versió. Les actualitzacions corregeixen fallades i afegeixen noves funcions.",
     "updates-beta-warning": "Actualitzacions beta activades",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Té activades les actualitzacions beta. Aquestes actualitzacions no han estat provades i sols es recomanen en instal·lacions de prova.",
     "updating-attached-relations": "Actualitzant comptadors d'arxius adjunts",
     "upload-file": "Pujar arxiu",
     "uploaded-at": "Pujat el",
