Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1777,7 +1777,7 @@
     "years": "Años",
     "yes": "Si",
     "yesterday": "Ayer",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Můžete uspořádat obrázky jejich přetažením",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Odeslali jste zvuk",
     "you-sent-a-document": "Odeslali jste dokument",
