--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -161,7 +161,7 @@
     "barcode": "Strichcode",
     "bcc": "BCC",
     "become-sponsor": "Sponsor werden",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Vorteil 3 Parteien",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -672,7 +672,7 @@
     "fixed-value": "Festwert",
     "flag": "Flagge",
     "folder-not-writable": "Sie können nicht über FacturaScripts Ordner schreiben.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Es kann nicht in die Ordner von FacturaScripts geschrieben werden: %folders%",
     "font": "Schriftart",
     "font-size": "Schriftgröße",
     "footer": "Fußzeile",
