--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1075,7 +1075,7 @@
     "no-reference": "No reference",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
-    "no-updates-now": "No updates at this time",
+    "no-updates-now": "No updates at this time.",
     "non-editable-accounting-entry": "Non-editable accounting entry",
     "non-editable-columns": "Non editable columns: %columns%",
     "non-editable-document": "Non editable document",
@@ -1649,7 +1649,7 @@
     "two-factor-auth-disable": "Disable two-factor authentication",
     "two-factor-auth-disabled": "Two-factor authentication disabled",
     "two-factor-auth-enable": "Enable two-factor authentication",
-    "two-factor-auth-enabled": "Two-factor authentication enabled",
+    "two-factor-auth-enabled": "Two-factor authentication enabled.",
     "two-factor-auth-p": "Set up the Google Authenticator app using the QR code, enter the code here, and click verify to complete the activation process.",
     "two-factor-code": "Two-factor code",
     "two-factor-enabled": "Enable 2-Step Authentication",
@@ -1777,7 +1777,7 @@
     "years": "Years",
     "yes": "Yes",
     "yesterday": "Yesterday",
-    "you-can-sort-images": "You can sort the images by dragging them",
+    "you-can-sort-images": "You can sort the images by dragging them.",
     "you-cant-delete-primary-variant": "You cannot delete the main variant of the product",
     "you-sent-a-audio": "You sent a sound",
     "you-sent-a-document": "You sent a document",
