--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Laburtua",
     "about": "Honi buruz",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Lehenik eta behin, idazpenaren kontzeptua sartu behar duzu",
     "accept": "Onartu",
     "accept-all": "Dena onartu",
     "accept-data": "Aldaketak edo eragiketa onartu",
@@ -1646,7 +1646,7 @@
     "try-again-later": "Saiatu berriro geroago",
     "tuesday": "Asteartea",
     "two-factor-auth": "Bi faktoreren autentifikazioa",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desaktibatu 2 urratseko egiaztapena",
     "two-factor-auth-disabled": "Bi faktoreren autentifikazioa desgaituta",
     "two-factor-auth-enable": "Bi pausoko egiaztapena aktibatu",
     "two-factor-auth-enabled": "Bi pausoko autentifikazioa aktibatuta",
