--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1415,7 +1415,7 @@
     "send": "Envoyer",
     "send-anonymous-data": "Envoyer des données anonymes",
     "send-audios": "Envoyer des audios",
-    "send-code-totp": "Envoyer le code TOTP",
+    "send-code-totp": "Envoyer le code TOTP.",
     "send-documents": "Envoyer des documents",
     "send-images": "Envoyer des images",
     "send-invoices": "Envoyer des factures",
@@ -1777,7 +1777,7 @@
     "years": "Années",
     "yes": "Si",
     "yesterday": "Hier",
-    "you-can-sort-images": "Vous pouvez trier les images en les faisant glisser",
+    "you-can-sort-images": "Vous pouvez trier les images en les faisant glisser.",
     "you-cant-delete-primary-variant": "Vous ne pouvez pas supprimer la variante principale du produit",
     "you-sent-a-audio": "Vous avez envoyé un audio",
     "you-sent-a-document": "Vous avez envoyé un document",
