--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1115,7 +1115,7 @@
     "only-closed": "Solo chiusi",
     "only-insert": "solo inserire",
     "only-owner-data": "Mostra solo i registri dell'utente",
-    "only-owner-data-p": "El usuario solamente podrá ver registros que haya creado él o que tenga asignados (como usuario o agente)",
+    "only-owner-data-p": "Se l'opzione per mostrare solo i record dell'utente è selezionata, l'utente potrà vedere solo i record che ha creato o che ha assegnato (come utente o agente).",
     "only-pending": "Solo in sospeso",
     "only-suspended": "Solo sospesi",
     "open": "apri",
@@ -1651,7 +1651,7 @@
     "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura l'app Google Authenticator utilizzando il QR, inserisci qui il codice e premi verifica per completare il processo di attivazione.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Codice a doppio fattore",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
@@ -1679,7 +1679,7 @@
     "unlock-entry": "Sblocca",
     "unpaid": "non pagato",
     "unsafe-file": "File non sicuro",
-    "unsafe-file-p": "Per motivi di sicurezza impediamo i download di alcuni tipi di file, come questo: %file%",
+    "unsafe-file-p": "Per motivi di sicurezza impediamo il download di alcuni tipi di file, come questo: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
     "until-subaccount": "Fino a subconto",
@@ -1693,7 +1693,7 @@
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Sono disponibili aggiornamenti per FacturaScripts. Si prega di fare clic sull'aggiornatore e scaricare la nuova versione. Gli aggiornamenti correggono errori e aggiungono nuove funzionalità.",
     "updates-beta-warning": "Actualizaciones beta activadas",
-    "updates-beta-warning-p": "⚠️ Tiene activadas las actualizaciones beta. Estas actualizaciones no han sido probadas y solamente se recomiendan en instalaciones de prueba.",
+    "updates-beta-warning-p": "⚠️ Hai attivato gli aggiornamenti beta. Questi aggiornamenti non sono stati testati e si raccomandano solo in installazioni di prova.",
     "updating-attached-relations": "Aggiornamento dei contatori dei file allegati",
     "upload-file": "Carica file",
     "uploaded-at": "Caricato alle",
