--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -921,7 +921,7 @@
     "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Igual a",
-    "limits": "Límites",
+    "limits": "Limites",
     "line": "Linha",
     "lines": "Linhas",
     "linux": "Linux",
@@ -1443,7 +1443,7 @@
     "series": "Séries",
     "server": "Servidor",
     "server-accepts-filesize": "Tamaño máx. subida archivos",
-    "server-software": "Software del servidor",
+    "server-software": "Software do servidor",
     "service": "Serviço",
     "services": "Serviços",
     "settings": "Configurações",
@@ -1692,7 +1692,7 @@
     "updater": "Atualizador",
     "updates-available": "Atualizações disponíveis",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As actualizações corrigem falhas e adicionam novas funcionalidades.",
-    "updates-beta-warning": "Actualizaciones beta activadas",
+    "updates-beta-warning": "Atualizações beta ativadas",
     "updates-beta-warning-p": "⚠️ Você ativou as atualizações beta. Essas atualizações não foram testadas e são recomendadas apenas em instalações de teste.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
