--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -93,7 +93,7 @@
     "allow-sale-without-stock-n": "Permetre la venda sense estoc en nous productes",
     "allow-update": "Permetre l'actualització",
     "already-installed": "Ya instalado",
-    "already-installed-p": "El programa ya está instalado",
+    "already-installed-p": "El programa ja està instal·lat",
     "always-to-company-email": "Siempre al email de la empresa",
     "amount": "Import",
     "amount-without-discount": "Preu sense desconte",
@@ -1777,7 +1777,7 @@
     "years": "Anys",
     "yes": "Sí",
     "yesterday": "Ahir",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Pots ordenar les imatges arrossegant-les",
     "you-cant-delete-primary-variant": "No pots eliminar la variant principal del producte",
     "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
